--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": "14.5.0",
+    "npm": "6.15.5"
+  },
   "name": "sorting-algorithms-in-js",
   "version": "1.0.0",
   "description": "Project 1, created for the \"Web Technologies\" classes",
@@ -25,7 +29,6 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,5 +40,6 @@
   "bugs": {
     "url": "https://github.com/nerooc/Sorting-Algorithms-in-JS/issues"
   },
-  "homepage": "https://github.com/nerooc/Sorting-Algorithms-in-JS#readme"
+  "homepage": "https://github.com/nerooc/Sorting-Algorithms-in-JS#readme",
+  
 }
